--- a/SM.Web/SM.WebSite/appsettings.json
+++ b/SM.Web/SM.WebSite/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "MySqlConn": "Data Source=localhost;Initial Catalog=smdb;User Id=root;Password=Keytop:wabjtam!;" }
 }
