--- a/SM.Web/SM.BLL/SM.BLL.csproj
+++ b/SM.Web/SM.BLL/SM.BLL.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\SM.Model\SM.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.configuration.abstractions\2.1.0\lib\netstandard2.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
